SERVER-28977 Coverity analysis defect 101508: Data race condition